--- a/Magento_Customer/templates/form/resetforgottenpassword.phtml
+++ b/Magento_Customer/templates/form/resetforgottenpassword.phtml
@@ -29,20 +29,20 @@ $passwordMinCharacterSets = $block->getRequiredCharacterClassesNumber();
             hyva.formValidation(this.$el),
             hyva.createBooleanObject('showPassword', false, {
                 passwordFieldType() {
-                    return this.showPassword() ? 'text' : 'password';
+                    return this.showPassword ? 'text' : 'password';
                 },
                 toggleShowPasswordAriaLabel() {
-                    return this.showPassword()
+                    return this.showPassword
                         ? '<?= $escaper->escapeJs(__('Hide Password')) ?>'
                         : '<?= $escaper->escapeJs(__('Show Password')) ?>';
                 }
             }),
             hyva.createBooleanObject('showPasswordConfirm', false, {
                 passwordConfirmFieldType() {
-                    return this.showPasswordConfirm() ? 'text' : 'password';
+                    return this.showPasswordConfirm ? 'text' : 'password';
                 },
                 toggleShowConfirmPasswordAriaLabel() {
-                    return this.showPasswordConfirm()
+                    return this.showPasswordConfirm
                         ? '<?= $escaper->escapeJs(__('Hide Password')) ?>'
                         : '<?= $escaper->escapeJs(__('Show Password')) ?>'
                 }
