--- a/Magento_Customer/templates/header/customer-menu.phtml
+++ b/Magento_Customer/templates/header/customer-menu.phtml
@@ -60,7 +60,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
     function initCustomerMenu() {
         return hyva.createBooleanObject('open', false, {
             ariaExpanded() {
-                return this.open() ? 'true' : 'false';
+                return this.open ? 'true' : 'false';
             }
         })
     }
