--- a/Magento_LayeredNavigation/templates/layer/state.phtml
+++ b/Magento_LayeredNavigation/templates/layer/state.phtml
@@ -95,7 +95,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
             },
             activeFilterIconClasses() {
                 return {
-                    'rotate-180': this.open()
+                    'rotate-180': this.open
                 }
         }});
     }
