--- a/Magento_Sales/templates/order/recent.phtml
+++ b/Magento_Sales/templates/order/recent.phtml
@@ -190,7 +190,7 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
 <script>
     function recentOrdersTabIndex() {
         return hyva.createBooleanObject('visible', false, {
-            tabIndex() {return this.visible() ? 0 : -1}
+            tabIndex() {return this.visible ? 0 : -1}
         })
     }
     window.addEventListener('alpine:init', () => Alpine.data('recentOrdersTabIndex', recentOrdersTabIndex), {once: true})
