Gift Message: Replace Property Reference with Function

--- a/Magento_GiftMessage/templates/php-cart/gift-options-container.phtml
+++ b/Magento_GiftMessage/templates/php-cart/gift-options-container.phtml
@@ -212,7 +212,11 @@ $slideOutDrawer = (bool) $block->getSlideOutDrawer();
             },
             showAdditionalOptions() {
                 return this.formBlockVisibility && this.hasActiveOptions;
-            }
+            },
+            getIsGiftMsgEnabled()
+            {
+                return this.isGiftMsgEnabled;
+            },
         }
     }
 
