--- a/Magento_Catalog/templates/product/compare/sidebar.phtml
+++ b/Magento_Catalog/templates/product/compare/sidebar.phtml
@@ -149,8 +149,8 @@ function initCompareSidebarClear() {
                             type="button"
                             @click.prevent="removeFromCompare(product.id)"
                             :aria-label="hyva.str('<?= $escaper->escapeJs(__('Remove product "%1" from the comparison')) ?>', product.name)"
-                            class="p-1 inline-flex shrink-0 items-center justify-center text-gray-500
-                                   hover:text-primary ml-auto"
+                            class="p-1 inline-flex shrink-0 items-center justify-center text-slate-600
+                                   hover:text-slate-800 ml-auto"
                         >
                             <?= $heroicons->xHtml('', 20, 20, ['aria-hidden' => 'true']); ?>
                         </button>
