Our little explanation mark is CSP only
The explanation mark only works is CSP if fully enforced.

For clearance we now will only use not as a prefix and implement it
that way which is compatible with both

--- a/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
+++ b/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
@@ -65,6 +65,9 @@ $currentProduct = $viewModels->require(CurrentProduct::class);
             ['!optionIsActive']() {
                 return ! this.optionIsActive();
             },
+            ['notOptionIsActive']() {
+                return ! this.optionIsActive();
+            },
             optionIsEnabled() {
                 <?php /* return true if a product with the option id === this.item.id is enabled */ ?>
                 const attributeId = this.getDataAttributeId(this.$el);
