--- a/Magento_GiftMessage/templates/php-cart/gift-options-container.phtml
+++ b/Magento_GiftMessage/templates/php-cart/gift-options-container.phtml
@@ -50,6 +50,9 @@ $slideOutDrawer = (bool) $block->getSlideOutDrawer();
             ['!formBlockVisibility']() {
                 return ! this.formBlockVisibility;
             },
+            ['notFormBlockVisibility']() {
+                return ! this.formBlockVisibility;
+            },
             resultBlockVisibility: false,
             hasActiveOptions: false,
             itemId: 'orderLevel',
@@ -304,7 +307,7 @@ if (! $isOrderLevelGiftOptionsEnabled && ! $isOrderLevelGiftWrappingEnabled) {
         >
             <?= $escaper->escapeHtml(__('Gift options')) ?>
             <?php if (!$slideOutDrawer): ?>
-                <span x-show="!formBlockVisibility" aria-hidden="true">
+                <span x-show="notFormBlockVisibility" aria-hidden="true">
                     <?= $heroicons->chevronDownHtml('inline-block', 16, 16) ?>
                 </span>
                 <span x-show="formBlockVisibility" aria-hidden="true">
@@ -319,7 +322,7 @@ if (! $isOrderLevelGiftOptionsEnabled && ! $isOrderLevelGiftWrappingEnabled) {
             aria-modal="true"
             @keydown.window.escape="closeDialog"
             class="fixed inset-y-0 right-0 z-30 flex max-w-full"
-            :aria-hidden="!formBlockVisibility"
+            :aria-hidden="notFormBlockVisibility"
         >
             <div class="backdrop"
                 x-show="formBlockVisibility"
