DEL: redundant w-full

--- a/Magento_GroupedProduct/templates/product/view/type/grouped.phtml
+++ b/Magento_GroupedProduct/templates/product/view/type/grouped.phtml
@@ -72,9 +72,7 @@ $hasAssociatedProducts = count($associatedProducts) > 0;
     <h2 class="text-gray-900 text-xl title-font font-medium mb-2">
         <?= $escaper->escapeHtml(__('Grouped product items')) ?>
     </h2>
-    <div class="hidden sm:flex py-2 border-t border-gray-300
-        w-full items-center justify-between gap-2"
-    >
+    <div class="hidden sm:flex py-2 border-t border-gray-300 items-center justify-between gap-2">
         <div class="text-gray-500 font-semibold text-left">
             <?= $escaper->escapeHtml(__('Product Name')) ?>
         </div>
