--- a/Magento_Catalog/templates/product/slider/product-slider-container.phtml
+++ b/Magento_Catalog/templates/product/slider/product-slider-container.phtml
@@ -201,8 +201,7 @@ $slideItemClasses = $block->getData('maybe_purged_tailwind_slide_item_classes') 
                     'opacity-25 pointer-events-none': this.isNextSlideButtonDisabled()
                 }
             },
-            showDummySlide()
-            {
+            showDummySlide() {
                 return this.pageFillers > this.$el.dataset.dummySlideNumber;
             },
         }
