ADD: comment for sku fix

--- a/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
+++ b/Magento_ConfigurableProduct/templates/product/view/type/options/js/configurable-options.phtml
@@ -273,6 +273,7 @@ $currentProduct = $viewModels->require(CurrentProduct::class);
 
                 const candidates = this.findProductIdsForPartialSelection(this.selectedValues);
 
+                <?php /* The skuCandidates property is not set if the Magento_Inventory (MSI) modules are disabled. */ ?>
                 window.dispatchEvent(
                     new CustomEvent(
                         'configurable-selection-changed',
