--- a/Magento_Catalog/templates/product/slider/product-slider.phtml
+++ b/Magento_Catalog/templates/product/slider/product-slider.phtml
@@ -40,8 +40,16 @@ $title = $block->getData('title') ?: '';
 $headingTag = $block->getData('heading_tag') ?: 'h3';
 $cssClasses = $block->getData('css_classes') ?: 'product-slider my-8';
 $headingCssClasses = $block->getData('heading_css_classes') ?: 'text-2xl font-medium';
+$columnCount = $block->getData('column_count') ?: 4;
+$sliderClasses = implode(' ', array_filter([
+    'snap-slider',
+    $columnCount > 1 ? 'md:[--snap-cols:2]' : '',
+    $columnCount > 2 ? 'lg:[--snap-cols:3]' : '',
+    $columnCount > 3 ? 'xl:[--snap-cols:4]' : '',
+]));
 
 $showHeading = $block->getData('show_heading') ?? true;
+$showPager = $block->getData('show_pager') ?? true;
 $hideDetails = $block->getData('hide_details') ?? false;
 $hideRatingSummary = $block->getData('hide_rating_summary') ?? false;
 
@@ -116,12 +124,12 @@ $itemRenderer->setData('hide_details', $hideDetails);
 ?>
 
 <section
-    id="<?= /* @noEscape */ $sliderName ?>"
+    id="<?= $escaper->escapeHtmlAttr($sliderName) ?>"
     class="<?= $escaper->escapeHtmlAttr($cssClasses) ?>"
     aria-label="<?= $escaper->escapeHtmlAttr($title); ?>"
     data-slider-type="<?= $escaper->escapeHtmlAttr($type) ?>"
     x-data
-    x-snap-slider.auto-pager.group-pager
+    x-snap-slider.group-pager
     x-defer="intersect"
 >
     <a
@@ -153,7 +161,7 @@ $itemRenderer->setData('hide_details', $hideDetails);
         </div>
     </div>
 
-    <div class="snap-slider md:[--snap-cols:2] lg:[--snap-cols:3] xl:[--snap-cols:4]" data-track>
+    <div class="<?= $escaper->escapeHtmlAttr($sliderClasses) ?>" data-track>
         <?php foreach ($items as $product): ?>
             <div id="<?= $sliderName . '-' . $product->getId() ?>" class="flex flex-col">
                 <?= /** @noEscape */ $productListItemViewModel->getItemHtmlWithRenderer(
@@ -169,13 +177,15 @@ $itemRenderer->setData('hide_details', $hideDetails);
         <?php endforeach; ?>
     </div>
 
-    <div class="snap-pager" data-pager>
-        <?php foreach ($items as $product): ?>
-            <a href="#<?= $sliderName . '-' . $product->getId() ?>" class="snap-marker">
-                <span class="sr-only"><?= $escaper->escapeHtmlAttr(__('View more about %1', $product->getName())) ?></span>
-            </a>
-        <?php endforeach; ?>
-    </div>
+    <?php if ($showPager): ?>
+        <div class="snap-pager" data-pager>
+            <?php foreach ($items as $product): ?>
+                <a href="#<?= $sliderName . '-' . $product->getId() ?>" class="snap-marker">
+                    <span class="sr-only"><?= $escaper->escapeHtmlAttr(__('View more about %1', $product->getName())) ?></span>
+                </a>
+            <?php endforeach; ?>
+        </div>
+    <?php endif; ?>
 
     <span id="<?= $escaper->escapeHtmlAttr($sliderName) ?>-slider-end" tabindex="-1"></span>
 </section>
